# python-shebang

./: .gitignore  README.md
package/: pyproject.toml
package/anacostia/: __main__.py  app.py  cli.py
package/myserver/: __main__.py  app.py  cli.py
test_repo/: app.py
