# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anacostia"
version = "0.1.0"
description = "Example server with auto-reload."
authors = [
  { name = "Your Name" }
]
requires-python = ">=3.9"

# This is the important part: create a CLI tool named `anacostia`
[project.scripts]
anacostia = "anacostia.cli:main"
